Новый победный звук, обход кэша

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
     }
     function playVictorySound() {
       try {
-        var a = new Audio('victory.mp3');
+        var a = new Audio('victory.mp3?v=2');
         a.volume = 0.7;
         a.play().catch(function() {});
       } catch (e) {}
